--- a/src/config/env/.env.dev
+++ b/src/config/env/.env.dev
@@ -1,5 +1,5 @@
 PORT=8080
-MONGO_URL=mongodb://localhost:27017/node-project
+MONGO_URL=mongodb://localhost:27017/vmo-project
 ACCESS_TOKEN_SECRET_KEY=acc3sst0k3n
 ACCESS_TOKEN_EXPIRED_TIME=1h
 REFRESH_TOKEN_SECRET_KEY=r3fr3sht0k3n
