--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "webpack-cli": "^4.2.0",
     "webpack-merge": "^5.4.0",
     "webpack-node-externals": "^2.5.2"
+  },
+  "engines": {
+    "node": "v14.15.1",
+    "yarn": "1.22.5"
   }
 }
