--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack -w --config webpack.dev.js",
+    "dev": "webpack -w --config ./src/config/webpack/webpack.dev.js",
     "server": "nodemon --inspect --exec babel-node server.js",
     "test": "mocha src/test/*.test.js --timeout 1000 --exit"
   },
@@ -13,6 +13,7 @@
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
