--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack -w --config ./src/config/webpack/webpack.dev.js",
     "server": "nodemon --inspect --exec babel-node server.js",
-    "test": "mocha src/test/*.test.js --timeout 1000 --exit"
+    "test": "mocha src/tests/*.test.js --require @babel/register --exit"
   },
   "dependencies": {
     "ajv": "^6.12.6",
@@ -20,7 +20,6 @@
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
-    "mongoose-unique-validator": "^2.0.3",
     "redis": "^3.0.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
@@ -35,7 +34,9 @@
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.14.0",
+    "mocha": "^8.2.1",
     "nodemon-webpack-plugin": "^4.3.2",
+    "sinon": "^9.2.2",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0",
     "webpack-merge": "^5.4.0",
