--- a/src/json/projectStatuses/updateProjectStatus.json
+++ b/src/json/projectStatuses/updateProjectStatus.json
@@ -8,7 +8,9 @@
       "type": "string"
     },
     "status": {
-      "type": "string"
+      "type": "string",
+      "enum": ["active", "inactive"]
     }
-  }
+  },
+  "additionalProperties": false
 }
