--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^7.14.0",
     "mocha": "^8.2.1",
     "nodemon-webpack-plugin": "^4.3.2",
+    "object-sizeof": "^1.6.1",
     "sinon": "^9.2.2",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0",
